Add header and improve spacing between sections.

--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body {
     font-family: Roboto, sans-serif;
     color: #E5E7EB;
     margin:0;
+    min-height:100vh;
 }
 
 .header {
@@ -31,7 +32,8 @@ a{text-decoration: none;
 .section2 {
     display:flex;
     justify-content: space-between;
-    margin: 22px 80px;
+    margin: 0px 80px 40px;
+    align-items: center;
 }
 .left-box {
     display:flex;
@@ -52,6 +54,7 @@ button {
     padding: 8px 24px;
     color:#8DA391;
     border-radius:12px;
+    min-width:max-content;
 }
 
 
@@ -60,6 +63,7 @@ button {
     flex-direction:column;
     align-items: center;
     background-color: #ffffff;
+    padding-bottom:40px;
 
 }
 
@@ -123,8 +127,10 @@ display:flex;
 flex-direction:row;
 justify-content: space-around;
 padding: 12px 28px;
-margin: 100px 400px;
+margin: 100px 300px;
 align-items: center;
+gap:22px;
+min-width:max-content;
 }
 
 .cta-top {
@@ -136,4 +142,13 @@ align-items: center;
 .cta-bottom {
     margin-top:0;
 }
+ .footer {
+    max-height:40px;
+    display:flex;
+    align-items: center;
+    justify-content: space-around;
+    padding:24px;
+    margin-top:auto;
+    
 
+ }
